--- a/20.GuessTheFlag.xcodeproj/xcshareddata/xcschemes/20.GuessTheFlag.xcscheme
+++ b/20.GuessTheFlag.xcodeproj/xcshareddata/xcschemes/20.GuessTheFlag.xcscheme
@@ -40,7 +40,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "A78516712DD3BE62003BCB69"
@@ -48,7 +49,7 @@
             BlueprintName = "20.GuessTheFlag"
             ReferencedContainer = "container:20.GuessTheFlag.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
